# nwnx4

./: .gitignore  CMakeLists.txt  README.md  bootstrap.ps1  build.ps1  meson.build  vcpkg.json
.github/workflows/: build.yml
demo/: .gitignore
demo/NWNX4Demo/: c_blackdragon0.utc  e_door_open.ncs  e_door_open.nss  e_pc_loaded.ncs  e_pc_loaded.nss  e_portal_use.ncs  e_portal_use.nss  gui_portal_ok.ncs  gui_portal_ok.nss  help.dlg  lt_white0.ult  module.ifo  module_portal.utp  nwnx_portal.upe  nwnxportalgateway.are  nwnxportalgateway.git  nwnxportalgateway.trn  nwnxportalgateway.trx  placeable1.utp  plc_mc_dais0.utp  songportal.upe
demo/nwnx_demo_mysql/: conv_c_error.ncs  conv_c_error.nss  default demo interior.trx  e_creature_perceive.ncs  e_creature_perceive.nss  e_door_open.ncs  e_lever_used.nss  e_mod_load.ncs  e_mod_load.nss  nwnx_sql.nss  setup.dlg
demo/nwnx_demo_sqlite/: default demo interior.git  e_door_open.nss  e_lever_used.ncs  e_lever_used.nss  e_mod_load.ncs  e_mod_load.nss  gui_door_return_ok.ncs  gui_door_return_ok.nss  gui_textsave_ok.ncs  gui_textsave_ok.nss  setup.dlg
demo/nwnx_demo_time/: default demo interior.are  default demo interior.git  default demo interior.trn  e_creature_perceive.ncs  e_creature_perceive.nss  e_lever_used.ncs  e_lever_used.nss  module.ifo  (+8 more)
lib/: .gitattributes
src/: CMakeLists.txt  NWNX4.sln  meson.build  nwnx_version.h.in
src/NWN2Lib/: NWN2.h  NWN2Common.h  NWN2Lib.h  NWN2ProtocolCommon.h
src/controller/: CMakeLists.txt  controller.cpp  controller.h  controller.vcproj  controller.vcxproj  controller.vcxproj.filters  main.cpp  meson.build  nwnx.ini  nwnx_restart.cmd  service.cpp  service.h  stdafx.h  stdwx.h  udp.cpp  udp.h
src/erf/: nwnx_include.erf  nwnx_objectattributes.erf  nwnx_sql.erf  nwnx_srvadmin.erf  nwnx_srvadmin.nss  nwnx_time.erf
src/gui/: CMakeLists.txt  GuiLog.cpp  GuiLog.h  Log.cpp  Log.h  NWNX GUI.pjd  dlgabout.cpp  dlgabout.h  gui.vcproj  gui.vcxproj  gui.vcxproj.filters  main.cpp  main.h  mainframe.cpp  mainframe.h  meson.build  nwnx.cpp  nwnx.h  nwnx.rc  stdwx.cpp  stdwx.h  worker.cpp  worker.h
src/gui/res/: hh_icon.xcf  hh_icon.xpm  hh_logo.xcf  hh_logo.xpm
src/hook/: CMakeLists.txt  NWNX4 Hook.vcproj  NWNX4 Hook.vcxproj  NWNX4 Hook.vcxproj.filters  crashdump.cpp  crashdump.h  hook.cpp  hook.h  hook.map  ini.h  meson.build  modulecopy.cpp  packetlog.cpp
src/messenger/: Logger.cpp  Logger.h
src/messenger/assets/: log.proto
src/misc/: IATHook.cpp  IATHook.h  Patch.cpp  Patch.h  afxres.h  ini.h  log.cpp  log.h  shmem.h
src/plugins/: dbplugin.cpp  dbplugin.h  legacy_plugin.cpp  legacy_plugin.h  plugin.cpp  plugin.h  scorcohook.cpp  scorcohook.h
src/plugins/chat/: NWNXChat.rc  chat.cpp  chat.h  chat.vcproj  chat.vcxproj  hook.cpp  hook.h  readme.txt  resource.h
src/plugins/funcs/: funcs.cpp  funcs.h  funcs.vcproj  funcs.vcxproj  meson.build
src/plugins/leto/: leto.cpp  leto.h  leto.vcproj  leto.vcxproj
src/plugins/mysql/: meson.build  mysql.cpp  mysql.h  mysql.vcproj  mysql.vcxproj  mysql.vcxproj.filters  mysql_plugin.cpp  mysql_plugin.h  nwn2heap.h  nwnx_sql.nss  xp_mysql.ini
src/plugins/obsolete/chat/: NWNXChat.rc  chat.cpp  chat.h  hook.cpp  hook.h  readme.txt  resource.h
src/plugins/obsolete/leto/: leto.cpp  leto.h
src/plugins/obsolete/ruby/: CVirtualMachine.h  NWNStructures.h  NWNXRuby.rc  hook.cpp  hook.h  nwnxruby.cpp  nwnxruby.h  nwscript.h  resource.h  ruby.vcxproj  ruby_int.c
src/plugins/obsolete/vaultster/: Client.cpp  Client.h  IniFile.cpp  Main.cpp  NWNX4vaultster.cpp  NWNX4vaultster.h  NWNXBase.cpp  NWNXBase.h  NWNXVaultster.cpp  NWNXVaultster.h  README.md  Server.cpp  Server.h  Sock.cpp  Sock.h  changelog.txt  constants.h  licence.txt  nwnx_vaultster.nss  packages.config  vaultster.cpp  vaultster.h  vaultster.vcxproj  vaultster_standalone.vcproj  xp_vaultster.ini
src/plugins/pickpocket/: Pickpocket.cpp  Pickpocket.h  XP Pickpocket.vcproj  XP Pickpocket.vcxproj  XP Pickpocket.vcxproj.filters  meson.build  nwnx_pickpocket.nss  pickpocket.vcxproj  xp_pickpocket.ini
src/plugins/profiler/: hash.cpp  hash.h  hook.cpp  hook.h  meson.build  profiler.cpp  profiler.h  profiler.vcproj  profiler.vcxproj  profiler.vcxproj.filters
src/plugins/ruby/: NWNStructures.h  NWNXRuby.rc  hook.cpp  hook.h  nwnx_ruby.nss  nwnxruby.cpp  nwnxruby.h  nwscript.h  resource.h  ruby.vcproj  ruby.vcxproj  ruby_int.c  ruby_int.h
src/plugins/sqlite/: meson.build  sqlite.cpp  sqlite.h  sqlite.vcproj  sqlite.vcxproj  sqlite.vcxproj.filters  xp_sqlite.ini
src/plugins/sqlite/lib/: sqlite3.c  sqlite3.h
src/plugins/time/: meson.build  time.cpp  time.h  time.vcproj  time.vcxproj  time.vcxproj.filters  time_plugin.cpp  time_plugin.h
src/plugins/vaultster/: Client.cpp  IniFile.cpp  Main.cpp  NWNX4vaultster.cpp  NWNX4vaultster.h  NWNXBase.cpp  NWNXBase.h  NWNXVaultster.cpp  Server.cpp  Sock.cpp  Sock.h  changelog.txt  libc.lib  readme.html  vaultster.vcxproj  xp_vaultster.ini
src/plugins/xp_bugfix/: MD5.cpp  MD5.h  NetLayer.cpp  NetLayer.h  Reflector.cpp  Reflector.h  ServerNetLayer.h  StackTracer.cpp  StackTracer.h  bugfix.cpp  bugfix.h  bugfix.txt  meson.build  nwnx_bugfix.nss  xp_bugfix.def  xp_bugfix.ini  xp_bugfix.vcproj  xp_bugfix.vcxproj
src/plugins/xp_fastboot/: fastboot.cpp  fastboot.h  meson.build  xp_fastboot.vcproj  xp_fastboot.vcxproj
src/plugins/xp_objectattributes/: PluginCore.cpp  gui_test_objectattributes.nss  meson.build  nwnx_objectattributes.nss  xp_objectattributes.cpp  xp_objectattributes.def  xp_objectattributes.h  xp_objectattributes.vcproj  xp_objectattributes.vcxproj
src/plugins/xp_srvadmin/: meson.build  srvadmin.cpp  srvadmin.h  xp_srvadmin.vcproj  xp_srvadmin.vcxproj
src/utils/nwn2srvquery/: Makefile  README  cacti_data_template.xml  cacti_data_template_nwn2_user_count.xml  cacti_graph_template.xml  cacti_graph_template_nwn2_logged_in_players.xml  nwn2srvquery.cpp
src/utils/nwn2srvutil/: nwn2srvutil.cpp  nwn2srvutil.vcproj
src/utils/nwn2srvutil_remote/: nwn2srvutil_remote.cpp  nwn2srvutil_remote.vcproj
src_release/: NWNX4.sln
test/: nwn2player.ini
(+754 files in other folders)
